[gd_scene load_steps=7 format=3 uid="uid://btnhr7dywcjjv"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_un3qf"]
[ext_resource type="PackedScene" uid="uid://bg41pc6ei5pdv" path="res://scenes/deck.tscn" id="2_oq7px"]
[ext_resource type="PackedScene" uid="uid://dvrt6eyfcvv7v" path="res://scenes/card.tscn" id="3_w8pqp"]
[ext_resource type="Texture2D" uid="uid://0sk3ueasistc" path="res://assets/images/cards/white/spades_6.png" id="4_7o5yl"]

[sub_resource type="Curve" id="Curve_grf42"]
_data = [Vector2(0, 0.789226), 0.0, 1.69979, 0, 0, Vector2(0.248649, 1), -0.0679916, -0.0679916, 0, 0, Vector2(1, 0.218096), -3.47404, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_ojd70"]
offsets = PackedFloat32Array(0.692982, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_un3qf")
metadata/_edit_horizontal_guides_ = [512.0]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.05
anchor_right = 0.6
anchor_bottom = 0.05
grow_horizontal = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "It's that purp"

[node name="DeckLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Cards in Deck"

[node name="StackLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.2
anchor_bottom = 0.1
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Stack"

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.96
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Continue"

[node name="DrawCard" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Draw Card"

[node name="DrawToStack" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Draw to Stack"

[node name="ClearStack" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Clear Stack"

[node name="GuessWrapper" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.45
anchor_right = 0.8
anchor_bottom = 0.85

[node name="GuessLabel" type="Label" parent="GuessWrapper"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Guesses"

[node name="GuessContainer" type="VBoxContainer" parent="GuessWrapper"]
layout_mode = 2
size_flags_vertical = 3

[node name="Stack" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.4
theme_override_constants/separation = 35

[node name="Deck" parent="." instance=ExtResource("2_oq7px")]
mouse_filter = 2
json_card_database_path = "res://assets/database/card_database.json"
json_card_collection_path = "res://assets/database/card_collection.json"
card_object = ExtResource("3_w8pqp")

[node name="ParticleHolder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinParticles" type="CPUParticles2D" parent="ParticleHolder"]
emitting = false
amount = 50
lifetime = 2.0
lifetime_randomness = 0.25
texture = ExtResource("4_7o5yl")
spread = 180.0
gravity = Vector2(0, 120)
initial_velocity_min = 200.0
initial_velocity_max = 350.0
orbit_velocity_min = 0.1
orbit_velocity_max = 0.2
scale_amount_min = 0.01
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_grf42")
color_ramp = SubResource("Gradient_ojd70")

[connection signal="pressed" from="ButtonContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonContainer/DrawCard" to="." method="_on_draw_card_pressed"]
[connection signal="pressed" from="ButtonContainer/DrawToStack" to="." method="_on_draw_to_stack_pressed"]
[connection signal="pressed" from="ButtonContainer/ClearStack" to="." method="_on_clear_stack_pressed"]
